# CLionProjects

Lecture 10/: CMakeLists.txt  File_IO_Riya.c
Lecture 11/: CMakeLists.txt  ChallengeReverseList_Riya.c  LinkedList_Riya.c
Lecture 12/: CMakeLists.txt  main.c
Lecture 13/: CMakeLists.txt  main.c
Lecture 2 HW/: CMakeLists.txt  Parallelogram_Assignment_1_Riya.c  QuadraticSolver_Assignment_1_Riya.c
Lecture 3/: CMakeLists.txt  Calculator_Assignment_2_Riya.c  LeapYearChecker_Assignment_2_Riya.c  main.c  math.c  math.h  relationship_Assignment_2_Riya.c
Lecture 4/: CMakeLists.txt  GCD_Assignment_3_Riya.c  Tables_Assignment_3_Riya.c  cCount_Assignment_3_Riya.c  main.c
Lecture 5/: CMakeLists.txt  NumbersExtended_Riya.c  NumbersExtended_Riya.h  Series_Assignment_4_Riya.c  main.c
Lecture 6/: CMakeLists.txt  Concatenation_Riya.c  Input_Array_Riya.c  Multiplication_Table_Riya.c  Random_Array_Creator_Riya.c  Sum_Matrices_Riya.c  main.c
Lecture 7/: CMakeLists.txt  main.c
Lecture 8/: CMakeLists.txt  SplitWord_Assignment_6_Riya.c  StringReverse_Assignment_6_Riya.c  StringsExtended_Riya.c  main.c
Lecture 9/: CMakeLists.txt  main.c
Tic Tac Toe Riya/: CMakeLists.txt  main.c  tic_tac_toe.h  tic_tac_toe_functions.c
test/: CMakeLists.txt
untitled/: main.c
untitled2/: main.c
