cmake_minimum_required(VERSION 3.16)
project(Lecture_3 C)

set(CMAKE_C_STANDARD 99)

#add_executable(Lecture_3 main.c)
#add_executable(Lecture_3 relationship_Assignment_2_Riya.c)
add_executable(Lecture_3 LeapYearChecker_Assignment_2_Riya.c)
#add_executable(Lecture_3 Calculator_Assignment_2_Riya.c math.c math.h)
