cmake_minimum_required(VERSION 3.16)
project(Lecture_6 C)

set(CMAKE_C_STANDARD 99)

#add_executable(Lecture_6 main.c)
#add_executable(Lecture_6 Input_Array_Riya.c)
#add_executable(Lecture_6 Random_Array_Creator_Riya.c)
#add_executable(Lecture_6 Multiplication_Table_Riya.c)
add_executable(Lecture_6 Sum_Matrices_Riya.c)
#add_executable(Lecture_6 Concatenation_Riya.c)
